new API, add view explore, add view community

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ pydantic
 yfinance
 google-generativeai
 python-dotenv
+requests
+sqlmodel
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
+pymysql
+PyJWT
