--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,3 +19,6 @@ steps:
   - '--platform=managed'
 images:
 - 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo'
+options:
+  logging: GCS
+  logsBucket: 'gs://trade_income_planner_bucket'
