--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
-    "rechart": "^0.0.1",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
@@ -33,5 +32,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "vite": "^7.2.4"
+  },
+  "overrides": {
+    "glob": "^9.0.0",
+    "core-js": "^3.23.3"
   }
 }
