--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,3 +19,5 @@ steps:
   - '--platform=managed'
 images:
 - 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:latest'
+options:
+  logging: CLOUD_LOGGING_ONLY
