--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,3 +9,4 @@ images:
 - 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/trade-income-planer'
 options:
   logging: CLOUD_LOGGING_ONLY
+  default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
