--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,10 +5,8 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA']
   - name: 'gcr.io/cloud-builders/cloudsdktool/cloud-sdk'
-    args: ['run', 'deploy', 'trade-income-planner', '--image', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA', 'managed', '--region', $_DEPLOY_REGION, '--platform', $_PLATFORM]
+    args: ['run', 'deploy', 'trade-income-planer', '--image', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA', '--region', $_DEPLOY_REGION, '--platform', $_PLATFORM]
     entrypoint: gcloud
-options:
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
-  logging: CLOUD_LOGGING_ONLY 
+timeout: 1200s
 images:
 - 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA'
