--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,9 @@ steps:
   - name: 'gcr.io/cloud-builders/cloudsdktool/cloud-sdk'
     args: ['run', 'deploy', 'trade-income-planer', '--image', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA', '--region', $_DEPLOY_REGION, '--platform', $_PLATFORM]
     entrypoint: gcloud
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  logging: CLOUD_LOGGING_ONLY 
 timeout: 1200s
 images:
 - 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA'
