--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,19 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [build, '-t', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA', '.']
+    args: [build, '-t', 'asia-southeast1-docker.pkg.dev/$PROJECT_ID/tiprepo/trade-income-planer:$COMMIT_SHA', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [push, 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA']
+    args: [push, 'asia-southeast1-docker.pkg.dev/$PROJECT_ID/tiprepo/trade-income-planer:$COMMIT_SHA']
 
-  - name: 'gcr.io/google-cloud-sdk/cloud-sdk'
-    args: [run, 'deploy', 'trade-income-planner', '--image', 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA', '--region', $_DEPLOY_REGION, '--platform', $_PLATFORM]
-
+  - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: gcloud
+    args: [run, 'deploy', 'trade-income-planner', '--image', 'asia-southeast1-docker.pkg.dev/$PROJECT_ID/tiprepo/trade-income-planer:$COMMIT_SHA', '--region', 'asia-southeast1', '--platform', 'managed', '--allow-unauthenticated']
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY 
 timeout: 1200s
+substitutions:
+  _DEPLOY_REGION: asia-southeast1
+  _PLATFORM: managed
 images:
-- 'asia-southeast1-docker.pkg.dev/delta-chess-482214-p4/tiprepo/trade-income-planer:$COMMIT_SHA'
+- 'asia-southeast1-docker.pkg.dev/$PROJECT_ID/tiprepo/trade-income-planer:$COMMIT_SHA'
